2010-07-08  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r62765.
        http://trac.webkit.org/changeset/62765
        https://bugs.webkit.org/show_bug.cgi?id=41840

        All jscore and layout tests crash on Qt bot (Requested by Ossy
        on #webkit).

        * wtf/FastMalloc.cpp:
        (WTF::TCMalloc_PageHeap::initializeScavenger):
        (WTF::TCMalloc_PageHeap::signalScavenger):
        (WTF::TCMalloc_PageHeap::scavengerThread):

2010-07-08  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Oliver Hunt.

        Interpreter: Crash in op_load_varargs on 64-bit
        https://bugs.webkit.org/show_bug.cgi?id=41795

        Added missing cast of argCount to int32_t in op_load_varargs.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):

2010-07-08  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Geoffrey Garen.

        Make FastMalloc more portable.
        https://bugs.webkit.org/show_bug.cgi?id=41790

        Use WTF::Mutex instead of pthread_mutex_t and
        replace pthread_cond_t with WTF::ThreadCondition.

        * wtf/FastMalloc.cpp:
        (WTF::TCMalloc_PageHeap::initializeScavenger):
        (WTF::TCMalloc_PageHeap::signalScavenger):
        (WTF::TCMalloc_PageHeap::scavengerThread):

2010-07-08  Patrick Gansterer  <paroga@paroga.com>

        Reviewed by Darin Adler.

        Remove needless #include <fcntl.h> from TCSystemAlloc.cpp.
        https://bugs.webkit.org/show_bug.cgi?id=41777

        * wtf/TCSystemAlloc.cpp:

2010-07-07  Darin Adler  <darin@apple.com>

        Fixed build in configurations like PowerPC.

        * runtime/RegExpConstructor.cpp: Added include of PassOwnPtr.h.
        * runtime/RegExpObject.cpp: Ditto.
        * wtf/SizeLimits.cpp: Changed compile time assertion to work
        even on platforms where two bool members do not end up taking
        the same size as one int member!

2010-07-07  Oliver Hunt  <oliver@apple.com>
