@@ -1,3 +1,11 @@
+2010-07-08  Xan Lopez  <xlopez@igalia.com>
+
+        Reviewed by Gustavo Noronha.
+
+        Silence a few noisy build rules.
+
+        * GNUmakefile.am:
+
 2010-07-08  Sheriff Bot  <webkit.review.bot@gmail.com>
 
         Unreviewed, rolling out r62765.
